# jax-pallas-kernel-lab

./: Makefile  PUBLISHING.md  README.md  __init__.py  pyproject.toml  test_fused.py  test_matmul.py
.github/workflows/: ci.yml
examples/: tile_sweep.py
src/jax_pallas_kernels/: benchmark.py  demo.py  fused.py  matmul.py
tests/: test_fused.py  test_matmul.py
