[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-pallas-kernel-lab"
version = "0.1.0"
description = "Custom JAX Pallas kernels with BlockSpec tiling and CPU interpret-mode validation."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Dennis Nduto"}]
keywords = ["jax", "pallas", "kernel", "gpu", "tpu"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Compilers",
]
dependencies = [
  "jax>=0.9.0,<0.10",
  "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
